--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
     sdk: flutter
   hive: ^2.2.3
   go_router: ^14.3.0
+  screen_identifier: ^0.0.2
  
 dev_dependencies:
   build_runner_core: ^7.2.9
