--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,37 +1,33 @@
 name: flexurio_erp_authentication
-description: "A new Flutter package project."
 version: 0.0.1
-homepage: null
-
 environment:
-  sdk: '>=3.4.0 <4.0.0'
+  sdk: ">=3.4.0 <4.0.0"
   flutter: ">=1.17.0"
-
+description: A new Flutter package project.
 dependencies:
+  dio: ^4.0.0
   flexurio_erp_core:
     path: ../flexurio_erp_core/
+  flutter:
+    sdk: flutter
   flutter_bloc: ^8.1.6
   freezed_annotation: ^2.2.0
+  go_router: ^14.3.0
+  hive: ^2.2.3
   hydrated_bloc: ^8.1.0
   pattern_formatter:
     git:
       url: https://github.com/augustineonu/flutter_pattern_formatter.git
       ref: e310fc81043468b9b2b063bac6122f7dde51b03f
-  dio: ^4.0.0
-  flutter:
-    sdk: flutter
-  hive: ^2.2.3
-  go_router: ^14.3.0
   screen_identifier: ^0.0.2
- 
 dev_dependencies:
-  build_runner_core: ^7.2.9
   build_runner: ^2.4.6
-  freezed: ^2.2.0
-  json_serializable: ^6.5.4
-  very_good_analysis: ^5.1.0
+  build_runner_core: ^7.2.9
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
-
+  freezed: ^2.2.0
+  json_serializable: ^6.5.4
+  pubspec_dependency_sorter: ^1.0.5
+  very_good_analysis: ^5.1.0
 flutter: null
