--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,16 +5,16 @@ environment:
   flutter: ">=1.17.0"
 description: A new Flutter package project.
 dependencies:
-  dio: ^4.0.0
+  dio: ^5.8.0+1
   flexurio_erp_core:
     path: ../flexurio_erp_core/
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.1.6
+  flutter_bloc: ^9.1.0
   freezed_annotation: ^2.2.0
   go_router: ^14.3.0
   hive: ^2.2.3
-  hydrated_bloc: ^8.1.0
+  hydrated_bloc: ^10.0.0
   pattern_formatter:
     git:
       url: https://github.com/augustineonu/flutter_pattern_formatter.git
