--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flx_authentication_flutter
-version: 0.0.1
+version: 0.1.0-dev.5
 environment:
   sdk: ">=3.4.0 <4.0.0"
   flutter: ">=1.17.0"
@@ -9,7 +9,9 @@ repository: https://github.com/flexurio/flx_authentication_flutter
 issue_tracker: https://github.com/flexurio/flx_authentication_flutter/issues
 dependencies:
   dio: ^5.8.0+1
-  flx_core_flutter: ^0.0.2
+  flx_core_flutter: ^1.0.0-dev.4
+  # flx_core_flutter:
+  #   path: ../flx_core_flutter
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.0
@@ -21,6 +23,9 @@ dependencies:
   hydrated_bloc: ^10.0.0
   pattern_formatter: ^4.0.0
   screen_identifier: ^0.0.2
+  easy_localization: ^3.0.7+1
+dependency_overrides:
+  intl: ^0.20.2
 dev_dependencies:
   build_runner: ^2.4.6
   build_runner_core: ^7.2.9
