--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,12 @@ repository: https://github.com/flexurio/flx_authentication_flutter
 issue_tracker: https://github.com/flexurio/flx_authentication_flutter/issues
 dependencies:
   dio: ^5.8.0+1
-  flx_core_flutter: ^0.0.2
+#  flx_core_flutter:
+#    git:
+#      url: https://gitlab.com/VNEU/flexurio-erp-core.git
+#      ref: main
+  flx_core_flutter:
+    path: ../flx_core_flutter
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.0
@@ -31,4 +36,6 @@ dev_dependencies:
   json_serializable: ^6.5.4
   pubspec_dependency_sorter: ^1.0.5
   very_good_analysis: ^5.1.0
+dependency_overrides:
+  intl: ^0.20.2
 flutter: null
