--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,12 +9,10 @@ repository: https://github.com/flexurio/flx_authentication_flutter
 issue_tracker: https://github.com/flexurio/flx_authentication_flutter/issues
 dependencies:
   dio: ^5.8.0+1
-#  flx_core_flutter:
-#    git:
-#      url: https://gitlab.com/VNEU/flexurio-erp-core.git
-#      ref: main
   flx_core_flutter:
-    path: ../flx_core_flutter
+    git:
+      url: https://gitlab.com/VNEU/flexurio-erp-core.git
+      ref: main
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.0
@@ -27,8 +25,6 @@ dependencies:
   pattern_formatter: ^4.0.0
   screen_identifier: ^0.0.2
   easy_localization: ^3.0.7+1
-dependency_overrides:
-  intl: ^0.20.2
 dev_dependencies:
   build_runner: ^2.4.6
   build_runner_core: ^7.2.9
