--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
       ref: main
   flutter:
     sdk: flutter
+  dropdown_button2: ^2.3.9
   flutter_bloc: ^9.1.0
   freezed_annotation: ^2.2.0
   go_router: ^14.3.0
